OCP4: Add container_security_operator_exists to PCIDSS profile
This pr adds container_security_operator_exists rule to PCI-DSS 4.0 6.3.2

--- a/controls/pcidss_4_ocp4.yml
+++ b/controls/pcidss_4_ocp4.yml
@@ -1356,10 +1356,12 @@ controls:
         it will be required and must be fully considered during a PCI DSS assessment.
       levels:
         - base
-      status: pending
+      status: automated
       notes: |-
         This requirement is a best practice until 31 March 2025, after which it will be required
         and must be fully considered during a PCI DSS assessment.
+      rules:
+        - container_security_operator_exists
 
     - id: 6.3.3
       title: All system components are protected from known vulnerabilities by installing
