CMP-2400: exclusion of the namespace for rule ocp4-resource-requests-quota-per-project
Excluded RHACS from the default namespace check. We don't want to releax our rule too much for optional operator,
as it might incress security risk, instead user should use tailoredprofile to set the exclusion regex.

Added a new variable 'var_resource_requests_quota_per_project_exempt_regex'

--- a/tests/assertions/ocp4/ocp4-stig-4.13.yml
+++ b/tests/assertions/ocp4/ocp4-stig-4.13.yml
@@ -317,8 +317,7 @@ rule_results:
     default_result: MANUAL
     result_after_remediation: MANUAL
   e2e-stig-resource-requests-quota-per-project:
-    default_result: FAIL
-    result_after_remediation: FAIL
+    default_result: PASS
   e2e-stig-routes-rate-limit:
     default_result: PASS
     result_after_remediation: PASS
