--- a/tests/assertions/ocp4/ocp4-stig-4.14.yml
+++ b/tests/assertions/ocp4/ocp4-stig-4.14.yml
@@ -317,8 +317,7 @@ rule_results:
     default_result: MANUAL
     result_after_remediation: MANUAL
   e2e-stig-resource-requests-quota-per-project:
-    default_result: FAIL
-    result_after_remediation: FAIL
+    default_result: PASS
   e2e-stig-routes-rate-limit:
     default_result: PASS
     result_after_remediation: PASS
