--- a/tests/data/product_stability/rhel9.yml
+++ b/tests/data/product_stability/rhel9.yml
@@ -13,6 +13,9 @@ benchmark_root: ../../linux_os/guide
 centos_major_version: '9'
 centos_pkg_release: 5ccc5b19
 centos_pkg_version: 8483c65d
+rocky_major_version: '9'
+rocky_pkg_release: 6279464b
+rocky_pkg_version: 350d275d
 chrony_conf_path: /etc/chrony.conf
 chrony_d_path: /etc/chrony.d/
 components_root: ../../components
