feat: add reference for twgcb

--- a/controls/twgcb_rhel9_server.yml
+++ b/controls/twgcb_rhel9_server.yml
@@ -32,6 +32,7 @@ levels:
   - id: nftables
     inherits_from:
       - common
+reference_type: twgcb
 product: rhel9
 controls:
   - id: TWGCB-01-012-0001
