--- a/products/rhel9/product.yml
+++ b/products/rhel9/product.yml
@@ -53,6 +53,7 @@ platform_package_overrides:
 reference_uris:
   cis: 'https://www.cisecurity.org/benchmark/red_hat_linux/'
   ccn: 'https://www.ccn-cert.cni.es/pdf/guias/series-ccn-stic/guias-de-acceso-publico-ccn-stic/6768-ccn-stic-610a22-perfilado-de-seguridad-red-hat-enterprise-linux-9-0/file.html'
+  twgcb: 'https://download.nics.nat.gov.tw/UploadFile/attachfilegcb/TWGCB-01-012_Red%20Hat%20Enterprise%20Linux%209%E6%94%BF%E5%BA%9C%E7%B5%84%E6%85%8B%E5%9F%BA%E6%BA%96%E8%AA%AA%E6%98%8E%E6%96%87%E4%BB%B6(%E4%BC%BA%E6%9C%8D%E5%99%A8)v1.0_1121207.pdf'
 
 centos_pkg_release: "5ccc5b19"
 centos_pkg_version: "8483c65d"
