--- a/components/filesystem.yml
+++ b/components/filesystem.yml
@@ -43,6 +43,7 @@ rules:
 - file_groupowner_var_log_messages
 - file_groupowner_var_log_syslog
 - file_groupownership_audit_binaries
+- file_groupownership_library_dirs
 - file_groupownership_system_commands_dirs
 - file_owner_backup_etc_group
 - file_owner_backup_etc_gshadow
